--- a/ammar.html
+++ b/ammar.html
@@ -25,7 +25,7 @@
 			}
 			.container-padding {
 			box-shadow: 0 0 25px;
-			width: 74%;
+			width: 70%;
 			height: 588.2px;
 			background-color: rgb(255, 255, 255);
 			box-sizing: border-box;
@@ -33,12 +33,13 @@
 			font-family: "Roboto", sans-serif;
 			font-size: 15px;
 			line-height: 22.5px;
-			margin-left: 30%;
+			margin-left: 34%;
 			padding-bottom: 0.15px;
 			padding-left: 16px;
 			padding-top: 0.15px;
 			padding-right: 10px;
 			}
+			
 			.padding { 
 				text-align: justify;
 			}
@@ -167,7 +168,7 @@
 				padding: 14px;
 			}
 			.content3 {
-				padding: 14px;
+				padding: none;
 			}
 			.content4 {
 				padding: 16px;
@@ -206,10 +207,10 @@
 	<!-- Container -->
 		<div class="container">
 			<div id="colspan">
-				<img src="Bahan Web Personal/Ammar.jpeg">
+				<img src="Ammar.jpeg">
 				<h4>MUAMMAR YASIR</h4>
-				<p><i class="fa fa-briefcase fa-fw large"></i>Mahasiswa IT</p>
-				<p><i class="fa fa-university fa-fw large"></i>Ubhara Jaya. Kampus II Bekasi</p>
+				<p><i class="fa fa-briefcase fa-fw large"></i>IT Collage Student</p>
+				<p><i class="fa fa-home fa-fw large"></i>Bekasi, West Java. INDONESIA</p>
 				<p><i class="fa fa-phone fa-fw large"></i>+62 85811545669</p>
 				<hr>
 				<h3><i class="fa fa-linux fa-fw large"></i>My Skills</h3>
@@ -233,7 +234,7 @@
 					<div class="load4">
 					<div class="progress4" style="width:80%">80%</div>
 				</div>
-				<p>Microsoft</p>
+				<p>Netbeans</p>
 					<div class="load4">
 					<div class="progress4" style="width:70%">70%</div>
 				</div>
@@ -266,7 +267,7 @@
 				<div class="content2">
 			<h3>SMP Islam Al-Munir Tambun Utara</h3>
 			<p><i class="fa fa-calendar fa-fw large"></i>2014-2017</p>
-			<p>Lulusan tahun 2017 di Sekolah Menengah Pertama Islam Al-Munir dengan nilai kelulusan 28.5 
+			<p>Lulusan tahun 2017 di Sekolah Menengah Pertama Islam Al-Munir dengan nilai rata-rata kelulusan UNBK 262,5. Peraih Juara 3 pada Ujian Sekolah saat Acara Wisudawan/i 
 			</p>
 			</div>
 			<hr>
@@ -283,12 +284,12 @@
 					<h2><i class="fa fa-linux fa-fw large"></i>My Story</h2>
 					<div class="content4">
 						 <h3>Ceritaku</h3>
-					<p>saya aslinya 6 bersaudara namun adik kedua saya laki-laki sudah tenang di alam sana jadi sekarang 5 bersaudara dirumah adik saya semuanya perempuan. Berasal dari keturunan Jawa-Betawi sejak saya TK sudah menetap di Bekasi kurang lebih 10 tahun. Awal tertarik di bidang IT yaitu ketika saya menginjak bangku di SD pelajaran Tikom hingga sampai saat ini. Hobby yang biasa saya lakukan yaitu membaca buku, berolahraga, membuat schedule rutinitas agar kegiatan lebih produktif, mendengarkan musik, dan bermain game pada waktu luang. Bercita-cita ingin sukses dimasa depan serta ingin membalas jasa atas kedua orangtua ku yang telah memberikan kasih sayang dan pengorbanan nya di waktu kecil.
+					<p>saya aslinya 5 bersaudara namun adik kedua saya laki-laki sudah tenang di alam sana jadi sekarang 4 bersaudara dirumah adik saya semuanya perempuan. Berasal dari keturunan Jawa-Jakarta sejak saya TK sudah menetap di Bekasi kurang lebih 10 tahun. Awal tertarik di bidang IT yaitu ketika saya menginjak bangku di SD pelajaran Tikom hingga sampai saat ini. Hobby yang biasa saya lakukan yaitu membaca buku, berolahraga, membuat schedule rutinitas agar kegiatan lebih produktif, mendengarkan musik, dan bermain game pada waktu luang. Bercita-cita ingin sukses dimasa depan serta ingin membalas jasa atas kedua orangtua ku yang telah memberikan kasih sayang dan pengorbanan nya di waktu saya masih kecil.
 						</p>
 					</div>
 					<div class="content5">
 						 <h3>Prestasiku</h3>
-					<p>selalu mendapatkan ranking 3-5 besar pada saat SD, meraih piala juara 2 dari perlombaan bulu tangkis, peraih juara 3 terbaik di sekolah pada Ujian Sekolah tingkat SMP antar kelas, skor predikat test TOEFL dengan akumulasi keseluruhan sebanyak 540 point, juara 2 lomba hafidz quran pada acara pesantren kilat tahun 2015/16 di Masjid Al-Mubarok, Rawamangun.Jaktim, memenangkan quiz web progamming berhadiah totebag dan pin HTML 3 serta CSS 5, serta berhasil menerima sertifikat kelulusan dari program MBKM dari mata kuliah AI dan Computer Security dengan nilai total course grade masing-masing 100,0
+					<p>selalu mendapatkan ranking 3-5 besar pada saat SD, meraih piala juara 2 dari perlombaan bulu tangkis, peraih juara 3 terbaik di sekolah pada Ujian Sekolah tingkat SMP, skor predikat test TOEFL dengan akumulasi keseluruhan sebanyak 540 point, juara 2 lomba hafidz quran pada acara pesantren kilat tahun 2015/16 di Masjid Al-Mubarok, Rawamangun.Jaktim, memenangkan lomba balap karung saat perlombaan 17an, serta berhasil menerima sertifikat kelulusan dari program MBKM dari mata kuliah AI dan Computer Security dengan nilai total course grade masing-masing 100,0
 						</p>
 					</div>
 			</div>
