--- a/ammar.html
+++ b/ammar.html
@@ -168,7 +168,7 @@
 				padding: 14px;
 			}
 			.content3 {
-				padding: none;
+				padding: 14px;
 			}
 			.content4 {
 				padding: 16px;
@@ -207,7 +207,7 @@
 	<!-- Container -->
 		<div class="container">
 			<div id="colspan">
-				<img src="Ammar.jpeg">
+				<img src="Bahan Web Personal/Ammar.jpeg">
 				<h4>MUAMMAR YASIR</h4>
 				<p><i class="fa fa-briefcase fa-fw large"></i>IT Collage Student</p>
 				<p><i class="fa fa-home fa-fw large"></i>Bekasi, West Java. INDONESIA</p>
