--- a/index.html
+++ b/index.html
@@ -133,25 +133,25 @@
         <div class="portfolio-box">
           <img src="images/portfolio4.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Web Projects</h4>
-            <p>The blog covers web development projects and ideas for you</p>
-            <a href="https://www.interviewbit.com/blog/web-development-projects/"><i class='bx bx-link-external'></i></a>
+            <h4>Breakout Game</h4>
+            <p>Classic paddle-ball game, break bricks, score points, and lets win it!</p>
+            <a href="https://itsmarmot.github.io/breakout/"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
           <img src="images/portfolio5.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>A free inspiration gallery from the world’s best website designers. (Updated daily)</p>
-            <a href="https://www.webdesign-inspiration.com/"><i class='bx bx-link-external'></i></a>
+            <h4>Typing Game</h4>
+            <p>Test your typing speed and accuracy, improve skills, have fun!</p>
+            <a href="https://itsmarmot.github.io/typing/"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
           <img src="images/portfolio6.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Python</h4>
+            <h4>Python Projects</h4>
             <p>Presented all the best python project ideas below based on difficulty level.</p>
             <a href="https://copyassignment.com/top-100-python-projects-with-source-code/"><i class='bx bx-link-external'></i></a>
           </div>
