--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Personal Portfolio Website Design | By Marmot</title>
+    <title>Personal Portfolio Website | Design By Marmot</title>
+    <link rel="website icon" type="png"
+    href="images/marmot.png">
 
     <!-- box icons -->
     <link
@@ -43,7 +45,7 @@
           <a href="https://www.facebook.com/Ammarwayne"><i class='bx bxl-facebook' ></i></a>
           <a href="https://twitter.com/muamarasta"><i class='bx bxl-twitter' ></i></a>
           <a href="https://www.instagram.com/muamarasta"><i class='bx bxl-instagram-alt' ></i></a>
-          <a href="https://www.linkedin.com/in/muammar-yasir/"><i class='bx bxl-linkedin' ></i></a>
+          <a href="https://github.com/itsmarmot/"><i class='bx bxl-github' ></i></a>
         </div>
         <a href="ammar.html" class="btn">Online CV</a>
       </div>
@@ -133,25 +135,25 @@
         <div class="portfolio-box">
           <img src="images/portfolio4.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Breakout Game</h4>
-            <p>Classic paddle-ball game, break bricks, score points, and lets win it!</p>
-            <a href="https://itsmarmot.github.io/breakout/"><i class='bx bx-link-external'></i></a>
+            <h4>Ubhara</h4>
+            <p>A blog website about my campus at Ubhara Jaya. Made without responsive better look in PC.</p>
+            <a href="https://itsmarmot.github.io/campus/"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
           <img src="images/portfolio5.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Typing Game</h4>
-            <p>Test your typing speed and accuracy, improve skills, have fun!</p>
-            <a href="https://itsmarmot.github.io/typing/"><i class='bx bx-link-external'></i></a>
+            <h4>Web Design</h4>
+            <p>A free inspiration gallery from the world’s best website designers. (Updated daily)</p>
+            <a href="https://www.webdesign-inspiration.com/"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
           <img src="images/portfolio6.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Python Projects</h4>
+            <h4>Python</h4>
             <p>Presented all the best python project ideas below based on difficulty level.</p>
             <a href="https://copyassignment.com/top-100-python-projects-with-source-code/"><i class='bx bx-link-external'></i></a>
           </div>
