--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="https://www.instagram.com/muamarasta"><i class='bx bxl-instagram-alt' ></i></a>
           <a href="https://github.com/itsmarmot/"><i class='bx bxl-github' ></i></a>
         </div>
-        <a href="ammar.html" class="btn">Online CV</a>
+        <a href="https://itsmarmot.github.io/cv/" class="btn">Online CV</a>
       </div>
 
       <div class="home-img">
