--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="portfolio-box">
           <img src="images/portfolio4.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Ubhara</h4>
+            <h4>Ubhara Jaya</h4>
             <p>A blog website about my campus at Ubhara Jaya. Made without responsive better look in PC.</p>
             <a href="https://itsmarmot.github.io/campus/"><i class='bx bx-link-external'></i></a>
           </div>
@@ -153,9 +153,9 @@
         <div class="portfolio-box">
           <img src="images/portfolio6.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Python</h4>
-            <p>Presented all the best python project ideas below based on difficulty level.</p>
-            <a href="https://copyassignment.com/top-100-python-projects-with-source-code/"><i class='bx bx-link-external'></i></a>
+            <h4>Music Web</h4>
+            <p>Journey back in time through the power of music on our nostalgia inspired web.</p>
+            <a href="https://itsmarmot.github.io/music"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
       </div>
