--- a/about.html
+++ b/about.html
@@ -1,40 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>Tentang Saya</title>
-    <link rel="stylesheet" type="text/css" href="css/about_style.css">
+
+    <!-- Template by Kovacs Alex  -->
+    <!-- MIT License -->
+    <!-- https://github.com/alexthemaster/about-website-template -->
+
+    <!-- Meta stuff -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Don't forget to change the title!! -->
+    <title>Hey itsmarmot About Me</title>
+    <link rel="website icon" type="png"
+    href="src/img/marmot.png">
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="css/bulma.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
+    <!-- Import the Roboto font from Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-    <header>
-        <h1>Tentang Saya</h1>
-    </header>
-    <main>
-        <section>
-            <h2>Profil Pribadi</h2>
-            <img src="images/marmot.jpeg" alt="Foto Profil">
-            <p>Saya adalah seseorang yang memiliki semangat tinggi dalam menjalani hidup dan berusaha untuk selalu menjadi yang terbaik dari versi saya sebelumnya. 
-                Saya percaya bahwa dengan kerja keras, ketekunan, dan keberanian, kita dapat mencapai impian kita. (Status: Jomblo Fisabilillah)
+    <center>
+        <div id="center">
+            <!-- If you have a logo, place it in /img/logo.png and uncomment the following line (if you do not wish it to be grayscale, just remove the grayscale attribute) -->
+            <img src="img/muamarasta.png" id="logo" grayscale>
+
+            <!-- Fill this in with the text you wish -->
+            <p id="about">
+                 Saya dalah seorang anak pertama dari keluarga yang berakar kuat dalam budaya Jawa-Betawi. Saya memiliki lima saudara, meskipun awalnya ada enam, namun sayangnya, adik laki-laki saya telah pergi pada usia yang sangat muda,
+                 ketika saya baru berumur 3 tahun. Ini telah membuat saya berlima saudara sekarang. Hobi saya yang utama adalah literasi, yang mencerminkan hasrat terhadap pengetahuan dan membaca. 
+                 Selain itu, Saya juga menikmati mendengarkan musik yang mampu meremajakan jiwa saya yang paling Favorit Lagu Emo, Pop Punk, Alternative Rock dan sangat tidak suka lagu dangdut. Olahraga juga menjadi bagian penting dalam kehidupan saya, membantu saya menjaga kesehatan fisik dan mental. Selain itu, Saya juga tertarik pada praktik healing untuk mencapai keseimbangan dalam hidup. 
+                 Makanan favorit saya mencakup Mie Ayam, Sapi Lada Hitam, Ayam Katsu, Bakmi, dan berbagai hidangan Jepang. 
+                 Namun, saya sangat tidak suka dengan ikan, bawang, jeruk atau makanan yang memiliki rasa asam lainnya. Sebaliknya, saya sangat menyukai makanan dengan cita rasa manis pedas yang menggugah selera. Saya memiliki cita-cita yang kuat, tetapi memilih untuk memiliki pasangan untuk tidak mengungkapkannya karena memiliki alasan pribadi untuk ini, 
+                 mungkin ingin menghindari perasaan kecewa jika harapan tersebut tidak terwujud. Yang terpenting, saya memiliki tekad untuk mencapai kesuksesan dan ingin memberikan kebahagiaan kepada kedua orang tua saya, terutama sebagai penghargaan atas pengorbanan yang mereka lakukan demi saya.
             </p>
-        </section>
-        <section>
-            <h2>Pengalaman</h2>
-            <ul>
-                <li>Peraih Sertifikat Pelatihan AI dan Computer Security</li>
-                <li>Pengalaman Kampus Merdeka Pertukaran Mahasiswa di BSI, Binus, dan LSPR selama 1 semester</li>
-                <li>Terlibat dalam beberapa kegiatan delegasi mahasiswa kampus</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Keterampilan</h2>
-            <ul>
-                <li>Pemrograman: HTML, CSS, JavaScript, Python</li>
-                <li>Desain Grafis: Adobe Photoshop, Adobe Illustrator</li>
-                <li>Manajemen Proyek: Agile, Scrum</li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2023 Muammar Yasir. All rights reserved.</p>
-    </footer>
+
+            <div id="links">
+                <!-- Comment the icons (links) you don't want to use (don't forget to fill out the links!!) -->
+
+              
+                <!-- Spotify -->
+                <a href="http://">
+                    <i class="fab fa-spotify fa-4x"></i>
+                </a>
+>
+
+            </div>
+
+            <footer>© Muammar Yasir,
+                <script>document.write(new Date().getFullYear())</script>. All Rights Reserved.</footer>
+        </div>
+    </center>
 </body>
+
 </html>
