--- a/about.html
+++ b/about.html
@@ -2,22 +2,16 @@
 <html lang="en">
 
 <head>
-
-    <!-- Template by Kovacs Alex  -->
-    <!-- MIT License -->
-    <!-- https://github.com/alexthemaster/about-website-template -->
-
     <!-- Meta stuff -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Don't forget to change the title!! -->
-    <title>Hey itsmarmot About Me</title>
+    <title>Welcome to About Me</title>
     <link rel="website icon" type="png"
-    href="src/img/marmot.png">
+    href="img/marmot.png">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/bulma.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 
@@ -47,11 +41,10 @@
 
               
                 <!-- Spotify -->
-                <a href="http://">
-                    <i class="fab fa-spotify fa-4x"></i>
-                </a>
->
-
+                <a href="  <!-- Spotify -->
+                    <a href="https://spotify.link/4nSM2SFj6Cb">
+                        <i class="fab fa-spotify fa-4x" ></i>
+                    </a>
             </div>
 
             <footer>© Muammar Yasir,
