--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
             <!-- Fill this in with the text you wish -->
             <p id="about">
-                 Saya dalah seorang anak pertama dari keluarga yang berakar kuat dalam budaya Jawa-Betawi. Saya memiliki lima saudara, meskipun awalnya ada enam, namun sayangnya, adik laki-laki saya telah pergi pada usia yang sangat muda,
+                 Saya adalah seorang anak pertama dari keluarga yang berakar kuat dalam budaya Jawa-Betawi. Saya memiliki lima saudara, meskipun awalnya ada enam, namun sayangnya, adik laki-laki saya telah pergi pada usia yang sangat muda,
                  ketika saya baru berumur 3 tahun. Ini telah membuat saya berlima saudara sekarang. Hobi saya yang utama adalah literasi, yang mencerminkan hasrat terhadap pengetahuan dan membaca. 
                  Selain itu, Saya juga menikmati mendengarkan musik yang mampu meremajakan jiwa saya yang paling Favorit Lagu Emo, Pop Punk, Alternative Rock dan sangat tidak suka lagu dangdut. Olahraga juga menjadi bagian penting dalam kehidupan saya, membantu saya menjaga kesehatan fisik dan mental. Selain itu, Saya juga tertarik pada praktik healing untuk mencapai keseimbangan dalam hidup. 
                  Makanan favorit saya mencakup Mie Ayam, Sapi Lada Hitam, Ayam Katsu, Bakmi, dan berbagai hidangan Jepang. 
