--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@
     <!-- Don't forget to change the title!! -->
     <title>Welcome to About Me</title>
     <link rel="website icon" type="png"
-    href="img/marmot.png">
+    href="src/img/marmot.png">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="src/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 
     <!-- Import the Roboto font from Google Fonts -->
@@ -23,8 +23,8 @@
 <body>
     <center>
         <div id="center">
-            <!-- If you have a logo, place it in /img/logo.png and uncomment the following line (if you do not wish it to be grayscale, just remove the grayscale attribute) -->
-            <img src="img/muamarasta.png" id="logo" grayscale>
+
+            <img src="src/img/muamarasta.png" id="logo" grayscale>
 
             <!-- Fill this in with the text you wish -->
             <p id="about">
