--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
       <div class="services-container">
         <div class="services-box">
           <i class='bx bxs-edit'></i>
-          <h3>Visual Editor</h3>
-          <p>Effortlessly craft and customize stunning visuals with a user-friendly visual editor, empowering your creative vision to shine.</p>
-          <a href="https://www.rumahweb.com/journal/visual-editor-wordpress/" class="btn">Read More</a>
+          <h3>Web Design</h3>
+          <p>A free inspiration gallery from the world’s best website designers. (Updated daily) and user experiences creatively.</p>
+          <a href="https://www.webdesign-inspiration.com/" class="btn">Read More</a>
         </div>
 
         <div class="services-box">
           <i class='bx bx-code-alt'></i>
-          <h3>Web Development</h3>
-          <p>Combines coding, design, and functionality to build and maintain websites, shaping the digital landscape and UX online.</p>
-          <a href="https://www.wysiwygwebbuilder.com/" class="btn">Read More</a>
+          <h3>Code Master</h3>
+          <p>Learn code, fuel your expertise, and become the maestro of the digital frontier, forging innovation and success.</p>
+          <a href="https://www.hostinger.co.id/tutorial/belajar-coding-online-gratis" class="btn">Read More</a>
         </div>
 
         <div class="services-box">
@@ -144,9 +144,9 @@
         <div class="portfolio-box">
           <img src="images/portfolio5.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>A free inspiration gallery from the world’s best website designers. (Updated daily)</p>
-            <a href="https://www.webdesign-inspiration.com/"><i class='bx bx-link-external'></i></a>
+            <h4>Weather App</h4>
+            <p>Stay informed with our user-friendly weather app for accurate forecasts.</p>
+            <a href="https://itsmarmot.github.io/weather/"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
@@ -154,7 +154,7 @@
           <img src="images/portfolio6.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Music Web</h4>
-            <p>Journey back in time through the power of music on our nostalgia inspired web.</p>
+            <p>Journey back in time through the power of music on nostalgia indonesia music web.</p>
             <a href="https://itsmarmot.github.io/music"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
