--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="services-box">
           <i class='bx bx-code-alt'></i>
-          <h3>Code Master</h3>
+          <h3>Code Mastery</h3>
           <p>Learn code, fuel your expertise, and become the maestro of the digital frontier, forging innovation and success.</p>
           <a href="https://www.hostinger.co.id/tutorial/belajar-coding-online-gratis" class="btn">Read More</a>
         </div>
