--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>Welcome to my personal web! I am very happy to be able to share information, stories and experiences through this page.
         </p>
         <div class="social-media">
-          <a href="https://www.facebook.com/Ammarwayne"><i class='bx bxl-facebook' ></i></a>
+          <a href="https://www.linkedin.com/in/muammar-yasir/"><i class='bx bxl-linkedin' ></i></a>
           <a href="https://twitter.com/muamarasta"><i class='bx bxl-twitter' ></i></a>
           <a href="https://www.instagram.com/muamarasta"><i class='bx bxl-instagram-alt' ></i></a>
           <a href="https://github.com/itsmarmot/"><i class='bx bxl-github' ></i></a>
