--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             <p id="about">
                  Saya adalah seorang anak pertama dari keluarga yang berakar kuat dalam budaya Jawa-Betawi. Saya memiliki lima saudara, meskipun awalnya ada enam, namun sayangnya, adik laki-laki saya telah pergi pada usia yang sangat muda,
                  ketika saya baru berumur 3 tahun. Ini telah membuat saya berlima saudara sekarang. Hobi saya yang utama adalah literasi, yang mencerminkan hasrat terhadap pengetahuan dan membaca. 
-                 Selain itu, Saya juga menikmati mendengarkan musik yang mampu meremajakan jiwa saya yang paling Favorit Lagu Emo, Pop Punk, Alternative Rock dan sangat tidak suka lagu dangdut. Olahraga juga menjadi bagian penting dalam kehidupan saya, membantu saya menjaga kesehatan fisik dan mental. Selain itu, Saya juga tertarik pada praktik healing untuk mencapai keseimbangan dalam hidup. 
+                 Selain itu, Saya juga menikmati mendengarkan musik yang mampu meremajakan jiwa saya yang paling Favorit Lagu Emo, Pop Punk, Alternative Music dan sangat tidak suka lagu dangdut. Olahraga juga menjadi bagian penting dalam kehidupan saya, membantu saya menjaga kesehatan fisik dan mental. Selain itu, Saya juga tertarik pada praktik healing untuk mencapai keseimbangan dalam hidup. 
                  Makanan favorit saya mencakup Mie Ayam, Sapi Lada Hitam, Ayam Katsu, Bakmi, dan berbagai hidangan Jepang. 
                  Namun, saya sangat tidak suka dengan ikan, bawang, jeruk atau makanan yang memiliki rasa asam lainnya. Sebaliknya, saya sangat menyukai makanan dengan cita rasa manis pedas yang menggugah selera. Saya memiliki cita-cita yang kuat, tetapi memilih untuk memiliki pasangan untuk tidak mengungkapkannya karena memiliki alasan pribadi untuk ini, 
                  mungkin ingin menghindari perasaan kecewa jika harapan tersebut tidak terwujud. Yang terpenting, saya memiliki tekad untuk mencapai kesuksesan dan ingin memberikan kebahagiaan kepada kedua orang tua saya, terutama sebagai penghargaan atas pengorbanan yang mereka lakukan demi saya.
@@ -42,7 +42,7 @@
               
                 <!-- Spotify -->
                 <a href="  <!-- Spotify -->
-                    <a href="https://spotify.link/4nSM2SFj6Cb">
+                    <a href="https://spotify.link/34ECd7mGoDb">
                         <i class="fab fa-spotify fa-4x" ></i>
                     </a>
             </div>
