--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         <div class="portfolio-box">
           <img src="images/portfolio3.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>First Web</h4>
-            <p>Digital narrative showcasing the colorful tapestry of my life. Made without responsive!</p>
+            <h4>MusicApp</h4>
+            <p>Elevate your music experience with a stylish player, my fav song and various genre.</p>
             <a href="https://ammar21.w3spaces.com/"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
