--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <div class="portfolio-layer">
             <h4>MusicApp</h4>
             <p>Elevate your music experience with a stylish player, my fav song and various genre.</p>
-            <a href="https://ammar21.w3spaces.com/"><i class='bx bx-link-external'></i></a>
+            <a href="https://itsmarmot.github.io/musicapp/"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
