--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
         <p>Welcome to my personal web! I am very happy to be able to share information, stories and experiences through this page.
         </p>
         <div class="social-media">
+          <a href="https://github.com/itsmarmot/"><i class='bx bxl-github' ></i></a>
           <a href="https://www.linkedin.com/in/muammar-yasir/"><i class='bx bxl-linkedin' ></i></a>
           <a href="https://twitter.com/muamarasta"><i class='bx bxl-twitter' ></i></a>
           <a href="https://www.instagram.com/muamarasta"><i class='bx bxl-instagram-alt' ></i></a>
-          <a href="https://github.com/itsmarmot/"><i class='bx bxl-github' ></i></a>
+          <a href="https://www.linkedin.com/in/muammar-yasir/"><i class='bx bxl-linkedin' ></i></a>
         </div>
         <a href="https://itsmarmot.github.io/cv/" class="btn">Online CV</a>
       </div>
