--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 
               
                 <!-- Spotify -->
-                    <a href="https://spotify.link/34ECd7mGoDb">
+                    <a href="https://spotify.link/RbcWE40h9Db">
                         <i class="fab fa-spotify fa-4x" ></i>
                     </a>
             </div>
