--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h2 class="heading">About <span>Me</span></h2>
         <h3><span></span></h3>
         <p>INTJ. born in Jakarta 2001. Currently, I am a IT student at the Faculty of Computer Science, 
-          Bhayangkara University Jakarta Raya. I have great interest in technology and computing. Through this personal website, I want to share my knowledge and experience about the computer world and many other interesting things. 
+          Bhayangkara University Jakarta Raya. I have great interest in data, technology and computing. Through this personal website, I want to share my knowledge and experience about the computer world and many other interesting things. 
           Thank you for visiting my personal page!</p>
         <a href="about.html" class="btn">Read More</a>
 
@@ -182,7 +182,7 @@
     <!-- footer design -->
     <footer class="footer">
       <div class="footer-text">
-        <p>Copyright &copy; 2023 by Marmot | All Right Reserved.</p>
+        <p>Copyright &copy; 2024 by Marmot | All Right Reserved.</p>
       </div>
 
       <div class="footer-iconTop">
