--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <!-- portfolio section design -->
     <section class="portfolio" id="portfolio">
-      <h2 class="heading">Latest <span>Project</span></h2>
+      <h2 class="heading">Latest <span>Mini Project</span></h2>
 
       <div class="portfolio-container">
         <div class="portfolio-box">
@@ -153,9 +153,9 @@
         <div class="portfolio-box">
           <img src="images/portfolio6.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Music Web</h4>
-            <p>Journey back in time through the power of music on nostalgia indonesia music web.</p>
-            <a href="https://itsmarmot.github.io/music"><i class='bx bx-link-external'></i></a>
+            <h4>Happy New Year</h4>
+            <p>Make your Happy New Year greeting special with animated SVG text for visual appeal.</p>
+            <a href="https://itsmarmot.github.io/newyear"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
       </div>
