--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="portfolio-box">
           <img src="images/portfolio6.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Happy New Year</h4>
+            <h4>HNY All</h4>
             <p>Make your Happy New Year greeting special with animated SVG text for visual appeal.</p>
             <a href="https://itsmarmot.github.io/newyear"><i class='bx bx-link-external'></i></a>
           </div>
