--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
         <h3><span></span></h3>
-        <p>ISTJ. born in Jakarta 2001. Currently, I am a IT student at the Faculty of Computer Science, 
+        <p>ISTJ. born in Jakarta 2001. Currently, I am a graduated IT student at the Faculty of Computer Science, 
           Bhayangkara University Jakarta Raya. I have great interest in data, technology and computing. Through this personal website, I want to share my knowledge and experience about the computer world and many other interesting things. 
           Thank you for visiting my personal page!</p>
         <a href="about.html" class="btn">Read More</a>
